Fixed broken links

--- a/notebooks/06_eda.ipynb
+++ b/notebooks/06_eda.ipynb
@@ -1652,7 +1652,7 @@
     "#### Limitations\n",
     "While the main focus of the project was on the process of cleaning and normalisation, some valuable insights were still found in the data. However, the final dataset has some limitations. It is important to remember that the original data was scraped in 2021, and as such was out-dated by the time the project started. For a more comprehesive analysis, IMDb provides <a href=\"https://developer.imdb.com/non-commercial-datasets/\">official datasets</a> which may be appropriate for future projects.\n",
     "\n",
-    "The same analysis is provided as a Streamlit dashboard <a href=\"blank\">here</a>."
+    "The same analysis is provided as a Streamlit dashboard <a href=\"https://television-series-dashboard.streamlit.app/\">here</a>."
    ]
   },
   {
